src/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: grpc_web_demo
              domains: ["*"]
              cors:
                allow_origin_string_match:
                - prefix: "*"
                allow_headers: "*"
              routes:
              - match: { prefix: "/grpc/" }
                route:
                  cluster: grpc_server
                  prefix_rewrite: "/"
                  max_grpc_timeout: 0s
              - match: { prefix: "/api/" }
                route:
                  cluster: restful_api_server
                  prefix_rewrite: "/"
              - match: { prefix: "/" }
                route: 
                  cluster: react_app_nginx
          http_filters:
          - name: envoy.grpc_web
          - name: envoy.filters.http.cors
          - name: envoy.router
          
  clusters:
  - name: react_app_nginx
    connect_timeout: 5s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: react_app_nginx
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: web, port_value: 80}
              
  - name: grpc_server
    connect_timeout: 5s
    type: strict_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: react_app_nginx
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address: { address: grpc-server, port_value: 5002}

  - name: restful_api_server
    connect_timeout: 5s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: restful_api_server
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address: { address: restful-api-server, port_value: 4888}
